# python-pyptables

./: CHANGES.txt  MANIFEST  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  test
examples/: simple_stateful.py
pyptables/: __init__.py  __main__.py  base.py  chains.py  tables.py
pyptables/rules/: __init__.py  arguments.py  base.py  marks.py  matches.py
pyptables/rules/forwarding/: __init__.py  base.py  channels.py  hosts.py  ipsets.py  locations.py  zones.py
pyptables/rules/input/: __init__.py  base.py
pyptables/test/: __init__.py
