[metadata]
name = PyPTables
version = 1.0.6
author = Jamie Cockburn
author_email = jamie_cockburn@hotmail.co.uk
license = LICENSE.txt
description = Python package for generating Linux iptables configurations.
keywords = iptables,, firewall
url = https://github.com/daggaz/python-pyptables
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: System :: Networking :: Firewalls
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux

[options]
packages = find:
install_requires = six; nose; coverage
